--- a/project_performance/views/menu.xml
+++ b/project_performance/views/menu.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <menuitem id="menu_project_manager" name="Quy trinh" parent="project.menu_main_pm"
+    <menuitem id="menu_project_manager" name="Quy trình" parent="project.menu_main_pm"
             sequence="100"/>
 
     <menuitem id="menu_pull_request" name="Pull Request" parent="menu_project_manager" action="prj_pull_request_action"/>
