--- a/project_performance/views/prj_update_plan_view.xml
+++ b/project_performance/views/prj_update_plan_view.xml
@@ -15,9 +15,9 @@
                 <field name="name"/>
                 <field name="description"/>
                 <field name="state"/>
-                <field name="project_id"/>
-                <field name="task_ids"/>
-                <field name="date_create"/>
+                <field name="project_ids" widget="many2many_tags"/>
+                <field name="task_ids" widget="many2many_tags"/>
+                <field name="create_date" string="Ngày tạo"/>
             </tree>
         </field>
     </record>
@@ -28,10 +28,10 @@
         <field name="arch" type="xml">
             <form string="prj_upadate_plan_form">
                 <header>
-                        <button name="action_rollback2draft" type="object" string="Quay lại" states="pending"/>
-                        <button name="action_rollback2pending" type="object" string="Quay lại" states="approved"/>
-                        <button name="action_rollback2approved" type="object" string="Quay lại" states="done"/>
-                        <button name="action_rollback2done" type="object" string="Quay lại" states="closed"/>
+                        <button name="action_rollback2draft" type="object" string="Nháp" states="pending"/>
+                        <button name="action_rollback2pending" type="object" string="Chờ Duyệt" states="approved"/>
+                        <button name="action_rollback2approved" type="object" string="Duyệt" states="done"/>
+                        <button name="action_rollback2done" type="object" string="Hoàn Thành" states="closed"/>
                         <button name="pending_action" type="object" string="Chờ Duyệt" states="draft"/>
                         <button name="approve_action" type="object" string="Duyệt" states="pending"/>
                         <button name="done_action" type="object" string="Hoàn Thành" states="approved"/>
@@ -67,11 +67,11 @@
                             <field name="description"/>
                         </group>
                         <group>
-                            <field name="project_id" attrs="{'readonly': [('state','in',['approved','done','closed'])]}"/>
+                            <field name="project_ids" widget="many2many_tags" attrs="{'readonly': [('state','in',['approved','done','closed'])]}"/>
                             <field name="task_domain" invisible="1"/>
                             <field name="task_ids" widget="many2many_tags" domain="task_domain"
                                      attrs="{'readonly': [('state','in',['approved','done','closed'])]}"/>
-                            <field name="date_create"/>
+                            <field name="create_date" string="Ngày tạo"/>
                         </group>
                     </group>
                     <notebook>
